// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "c57d2398c38f95c0",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 93,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 231,
  "paths": 0,
  "selects": 0,
  "sha": "f734d45d4a69ebdf",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 83,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 131,
  "paths": 0,
  "selects": 0,
  "sha": "62fa64d5e1c0e99a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 51,
  "paths": 0,
  "selects": 0,
  "sha": "e5a0b169e6de9a01",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 18,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 76,
  "paths": 0,
  "selects": 0,
  "sha": "922653145f4e20e5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 55,
  "paths": 0,
  "selects": 0,
  "sha": "7310d0c89d3be346",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 24,
  "canvases": 0,
  "inputs": 8,
  "lengthBucket": 233,
  "paths": 6,
  "selects": 0,
  "sha": "2755315e7f05b864",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 41,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 114,
  "paths": 0,
  "selects": 0,
  "sha": "aa7207c27ae62a23",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "10cedbb154e8e630",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 53,
  "paths": 0,
  "selects": 0,
  "sha": "e8499663e095e00f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 6,
  "selects": 0,
  "sha": "8ac798ff64d57e05",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 50,
  "paths": 0,
  "selects": 0,
  "sha": "8282eace37f607df",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 453,
  "paths": 6,
  "selects": 0,
  "sha": "8657ad5a37026fa2",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 29,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 128,
  "paths": 0,
  "selects": 0,
  "sha": "30d6db8e857caa09",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 48,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 210,
  "paths": 2,
  "selects": 2,
  "sha": "9c556bb0f5852ad5",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 223,
  "paths": 1,
  "selects": 0,
  "sha": "25211586b3de3495",
  "svgs": 3,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "84b36f01119211ea",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 197,
  "paths": 0,
  "selects": 0,
  "sha": "2371cdceb9a6be77",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 227,
  "paths": 0,
  "selects": 0,
  "sha": "f35c2ba4f2e00687",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 104,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 178,
  "paths": 0,
  "selects": 0,
  "sha": "e15822ec50f96438",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 70,
  "paths": 0,
  "selects": 0,
  "sha": "2a682f808b4057f5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 101,
  "paths": 0,
  "selects": 0,
  "sha": "1a5d8cb53884aef3",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 107,
  "paths": 0,
  "selects": 2,
  "sha": "91bd2fd5049bc408",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 165,
  "paths": 22,
  "selects": 1,
  "sha": "ee4db903a0cf7faf",
  "svgs": 13,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 31,
  "paths": 0,
  "selects": 0,
  "sha": "d9fb647a0671a369",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 18,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 98,
  "paths": 0,
  "selects": 2,
  "sha": "6baf090421d281a4",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 58,
  "paths": 0,
  "selects": 0,
  "sha": "5115931e1feda853",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 69,
  "paths": 0,
  "selects": 0,
  "sha": "fc95da41a13ac06b",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 265,
  "paths": 0,
  "selects": 0,
  "sha": "3b94588650cf7858",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "0406e1a84a738883",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 35,
  "canvases": 1,
  "inputs": 6,
  "lengthBucket": 168,
  "paths": 0,
  "selects": 1,
  "sha": "58a309ff1c4eb26e",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 105,
  "paths": 0,
  "selects": 0,
  "sha": "4bd22cad0f96d874",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 170,
  "paths": 0,
  "selects": 0,
  "sha": "bd822a389e69d4dd",
  "svgs": 0,
}
`;
